--- a/logstash/logstash-advanced.conf
+++ b/logstash/logstash-advanced.conf
@@ -4,7 +4,7 @@ input {
     start_position => "beginning"
     sincedb_path => "/dev/null"
     codec => multiline {
-      pattern => "^%{TIMESTAMP_ISO8601}"
+      pattern => "^%{TIMESTAMP_ISO8601}|^{"
       negate => true
       what => "previous"
     }
@@ -12,60 +12,91 @@ input {
 }
 
 filter {
-  # Кастомные grok паттерны
+  # Кастомные grok паттерны для сложных форматов
   grok {
-    patterns_dir => ["/usr/share/logstash/patterns"]
+    patterns_dir => ["/usr/share/logstash/patterns/custom"]
+    
+    # Для стандартного формата логов
     match => { 
       "message" => "%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:level} \[%{DATA:thread}\] %{DATA:class} - %{GREEDYDATA:message}" 
     }
+    
+    # Для логов с пользовательским контекстом
+    match => {
+      "message" => "%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:level} \[%{DATA:correlation_id}\] \[%{DATA:user_id}\] %{GREEDYDATA:message}"
+    }
   }
 
-  # Парсинг сложных JSON с вложенными объектами
+  # Обработка JSON логов с вложенными объектами
   if [message] =~ /^{.*}$/ {
     json {
       source => "message"
       target => "parsed_json"
     }
     
-    # Извлечение вложенных полей
-    if [parsed_json][request] {
+    # Извлечение вложенных полей из сложного JSON
+    if [parsed_json][context] {
       mutate {
         add_field => {
-          "http_method" => "%{[parsed_json][request][method]}"
-          "http_url" => "%{[parsed_json][request][url]}"
-          "user_agent" => "%{[parsed_json][request][headers][user_agent]}"
+          "correlation_id" => "%{[parsed_json][context][correlation_id]}"
+          "user_id" => "%{[parsed_json][context][user_id]}"
+          "session_id" => "%{[parsed_json][context][session_id]}"
+        }
+      }
+    }
+    
+    # Обработка ошибок с stacktrace
+    if [parsed_json][exception] {
+      mutate {
+        add_field => {
+          "exception_class" => "%{[parsed_json][exception][class]}"
+          "exception_message" => "%{[parsed_json][exception][message]}"
         }
       }
     }
   }
 
-  # Парсинг логов баз данных
+  # Парсинг SQL запросов
   grok {
     match => { 
-      "message" => "(?<db_timestamp>%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}) %{WORD:db_operation} %{WORD:db_table}.*Duration: %{NUMBER:duration}ms" 
+      "message" => "SQL: %{WORD:db_operation} %{GREEDYDATA:sql_query} \[Parameters: %{GREEDYDATA:sql_parameters}\]" 
     }
   }
 
-  # Валидация и нормализация
-  if [duration] {
+  # Парсинг HTTP запросов
+  grok {
+    match => { 
+      "message" => "%{WORD:http_method} %{URIPATH:http_path} %{NUMBER:http_status} %{NUMBER:response_time}ms" 
+    }
+  }
+
+  # Валидация и нормализация данных
+  if [response_time] {
     mutate {
-      convert => { "duration" => "integer" }
+      convert => { "response_time" => "integer" }
     }
     
-    # Категоризация по длительности
-    if [duration] > 1000 {
+    # Категоризация по производительности
+    if [response_time] > 1000 {
       mutate {
-        add_field => { "performance" => "slow" }
+        add_field => { "performance_category" => "slow" }
       }
-    } else if [duration] > 500 {
+    } else if [response_time] > 500 {
       mutate {
-        add_field => { "performance" => "medium" }
+        add_field => { "performance_category" => "medium" }
       }
     } else {
       mutate {
-        add_field => { "performance" => "fast" }
+        add_field => { "performance_category" => "fast" }
       }
     }
+  }
+
+  # Парсинг timestamp
+  date {
+    match => [ "timestamp", "ISO8601" ]
+    target => "@timestamp"
+    timezone => "UTC"
   }
 }
 
